feat: added user delete and update functions feat: added where validation to /reports endpoint
